	Handle transparent fill patterns in PS_fillbox() in the same way
	as is already done in PS_filled_polygon().
	Bug #3567035

	* src/eval.c (fill_gpval_axis) src/axis.h: The RANGE_REVERSE flag no
	longer exists, so do not report it to the user and do not swap axis
	min/max values when storing them for later mousing calculations by the
	canvas, svg, and other terminals.

	* demo/html:  Update online demo collection to include linked axes
	and RGBA color applied to individual lines. 

2012-09-12  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/gnuplot-ja.doc docs/term-ja.diff man/gnuplot-ja.1:
	Sync with English documentation (rev.1.746).

2012-09-11  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c:  Index histogram stacks using the point's index rather
	than its x coordinate. Fixes rowstacked histogram array overflow.
	Bug #3566662

2012-09-05  Ethan A Merritt  <merritt@u.washington.edu>

	* src/tabulate.c:  Output a column for variable color if it is used 
	in the plot command.

2012-09-04  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* term/emf.trm:  Revise the object-handling code so that the current
	brush or pen is deselected before being deleted and recreated.
	Defer application of new dash+color line properties until needed for a
	new line segment.

2012-09-04  Ethan A Merritt  <merritt@u.washington.edu>

	* term/emf.trm: Seek to the beginning of the output file after plotting.
	If a user mistakenly tries to place two plots in the same file, the 
	second will cleanly overwrite the first rather than corrupting it.

2012-08-30  Ethan A Merritt  <merritt@u.washington.edu>

	* term/emf.trm (EMF_dashtype):  Fix incorrect mapping of requested
	linetype to the dash pattern.  Only LT_AXIS was properly mapped.

	* term/emf.trm (EMF_set_font):  (thanks to Shige Takeno) The intended
	optimization to prevent redundant requests for the same font was not
	implemented correctly.  This change fixes it so that a new font request